<resources>
    <string name="app_name">PDM</string>
    <string name="valorInicial">Valor Inicial:</string>
    <string name="aplicacaoMensal">Aplicação Mensal:</string>
    <string name="tempoAplicacao">Tempo Aplicação:</string>
    <string name="taxa">Taxa:</string>
    <string name="calcular">Calcular</string>
    <string name="resultado">Resultado:</string>
    <string name="valorInicialHint">Valor em R$. Ex: 1700.00</string>
    <string name="tempoAplicacaoHint">Em Meses:</string>
    <string name="consumoTotal">Consumo total R$:</string>
    <string name="couvert">Couvert artístico R$:</string>
    <string name="dividirConta">Dividir conta por:</string>
    <string name="taxaServico">Taxa de Serviço(10%) R$:</string>
    <string name="contaTotal">Conta total R$:</string>
    <string name="valorPessoa">Valor por pessoa R$:</string>
    <string name="key">AIzaSyDfJNwz6w7yIhsbXKs6iNWv5gw1VgeL7I0</string>


    <string-array name="estados">
        <item>RS</item>
        <item>SC</item>
        <item>PR</item>
    </string-array>

    <string-array name="seletor">
        <item>+</item>
        <item>-</item>
        <item>*</item>
        <item>/</item>
    </string-array>
</resources>
