<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PoupancaActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1"
            android:minWidth="25px"
            android:minHeight="25px"
            android:id="@+id/tableLayout1"
            android:padding="10dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/logo"
                android:src="@drawable/poupanca_logo"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/valorInicial"
                android:textColor="@android:color/black"
                android:textSize="15sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtValorInicial"
                android:hint="Valor em R$. Ex: 1700.00"
                android:inputType="numberDecimal"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aplicacaoMensal"
                android:textColor="@android:color/black"
                android:textSize="15sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtAplicacaoMensal"
                android:hint="Ex: 100.00"
                android:inputType="numberDecimal"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tempoAplicacao"
                android:textColor="@android:color/black"
                android:textSize="15sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtTempoAplicacao"
                android:hint="Em meses"
                android:inputType="number"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/taxa"
                android:textColor="@android:color/black"
                android:textSize="15sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtTaxa"
                android:hint="Ex: 0.02"
                android:inputType="numberDecimal"
                android:textSize="20sp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnCalcular"
                android:layout_marginTop="20dp"
                android:text="@string/calcular"
                android:onClick="calcClick"
                android:textSize="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resultado"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:id="@+id/lblResultado"
                android:textColor="@android:color/black"
                android:textSize="25sp"/>
        </TableLayout>
    </ScrollView>
</LinearLayout>